<resources>
    <string name="app_name">牛群</string>
    <string name="we_chat">聊天</string>
    <string name="the_brands">品牌</string>
    <string name="my_center">我</string>
    <string name="login_head">HERD OF CATTLE</string>
    <string name="the_register">注册</string>
    <string name="the_login">登录</string>
    <string name="to_register_prompt">没有账号，立即注册</string>
    <string name="account_forget_password">忘记密码</string>
    <string name="account_forget_password2">忘记密码？</string>
    <string name="hint_login_username">请输入手机号码</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="hint_login_password_again">请再次输入登录密码</string>
    <string name="app_privacy">隐私</string>
    <string name="account_retrieve_password">找回密码</string>
    <string name="hint_verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="get_verify_code_again">重新验证</string>
    <string name="hint_recommendation_code">如有推荐码请输入</string>
    <string name="register_read_and_agree">阅读并同意</string>
    <string name="app_user_agreement">《牛群用户服务条款》</string>
    <string name="verify_mobile_number">验证手机号码</string>
    <string name="the_next">下一步</string>
    <string name="input_verification_code">输入短信验证码</string>
    <string name="we_to_mobile">我们给手机号码</string>
    <string name="send_a_verification_code">发送了一个6位验证码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="input_new_password_again">再次输入新密码</string>
    <string name="confirm_change">确定修改</string>
    <string name="mobile_in_china">+86</string>
    <string name="error_mobile_number">手机号码格式不正确</string>
    <string name="error_mobile_empty">手机号码不能为空</string>
    <string name="error_password_empty">登录密码不能为空</string>
    <string name="error_password_length">登录密码不能少于六位</string>
    <string name="error_password_no_same">两次输入密码不一致</string>
    <string name="error_verify_code_empty">验证码不能为空</string>
    <string name="error_from_service">服务器错误</string>
    <string name="base_number">0123456789</string>
    <string name="the_second">秒</string>
    <string name="http_client_false">网络异常，请稍后重试</string>
    <string name="success_get_verify_code">验证码发送成功</string>
    <string name="address_book">通讯录</string>
    <string name="niu_circle">牛人圈</string>
    <string name="scan_it">扫一扫&#160;&#160;&#160;&#160;</string>
    <string name="receive_payment">收付款&#160;&#160;&#160;&#160;</string>
    <string name="my_receive_payment">收付款</string>
    <string name="my_symbol_app">￥</string>
    <string name="my_financial">理财</string>
    <string name="my_collection">收藏</string>
    <string name="my_shopping_cart">购物车</string>
    <string name="my_orders">订单</string>
    <string name="my_photos">相册</string>
    <string name="my_setting">设置</string>
    <string name="my_eat">吃</string>
    <string name="my_drink">喝</string>
    <string name="my_play">玩</string>
    <string name="my_happy">乐</string>
    <string name="my_clothes">衣</string>
    <string name="my_live">住</string>
    <string name="my_travel">行</string>
    <string name="my_education">教育</string>
    <string name="my_medical">医疗</string>
    <string name="niuqun_service">牛群服务</string>
    <string name="other_services">第三方服务</string>
    <string name="account_and_safe">账户与安全</string>
    <string name="new_notify">新消息通知</string>
    <string name="help_and_feedback">意见反馈</string>
    <string name="app_about">关于牛群</string>
    <string name="load_more">正在加载…</string>
    <string name="download_now">正在下载</string>
    <string name="has_new_version_to_updata">发现新版本，是否立即更新？</string>
    <string name="updata_version_rightnow">立即更新</string>
    <string name="updata_version_later">以后再说</string>
    <string name="has_load_all">已经到底啦！</string>
    <string name="new_goods">新品</string>
    <string name="person_info">个人信息</string>
    <string name="person_avatar">头像</string>
    <string name="person_name">名字</string>
    <string name="niuqun_number">牛群号</string>
    <string name="niuqun_number_hint">牛群号：</string>
    <string name="person_code">我的二维码</string>
    <string name="person_sign">个性签名</string>
    <string name="person_address">我的地址</string>
    <string name="new_version">当前版本：v</string>
    <string name="to_submit">提交</string>
    <string name="feedback_submit_hint">请输入您要反馈的内容…</string>
    <string name="get_niuqun_symbol">获取红包</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="buy_rightnow">立即购买</string>
    <string name="to_makesure">确定</string>
    <string name="goods_ad_hint">按顺序点击广告语文字获取红包</string>
    <string name="goods_ad_wrong_hint">广告点击错误</string>
    <string name="goods_detail">详情</string>
    <string name="get_score_success">您成功获得</string>
    <string name="goods_add_cart_success">成功加入购物车</string>
    <string name="to_settlement">结算</string>
    <string name="submit_settlement">提交结算</string>
    <string name="delivery_method">配送方式</string>
    <string name="express_free_post">快递免邮</string>
    <string name="remark_by_buyer">买家留言</string>
    <string name="remark_by_buyer_hint">对本次交易的留言</string>
    <string name="please_select_address">请选择收货地址</string>
    <string name="no_less">不能再少啦</string>
    <string name="cart_is_full">太多了，购物车放不下了</string>
    <string name="to_del_from_cart">删除</string>
    <string name="get_total_from_cart">合计：</string>
    <string name="to_edit_cart">编辑</string>
    <string name="edit_cart_over">完成</string>
    <string name="has_no_goods_in_cart">您没有选择任何商品</string>
    <string name="default_address">默认地址</string>
    <string name="add_new_address">添加收货地址</string>
    <string name="manage_addresses">管理收货地址</string>
    <string name="creat_new_address">添加新地址</string>
    <string name="edit_a_address">编辑地址</string>
    <string name="edit_a_address_success">编辑成功</string>
    <string name="address_detail">地址详情</string>
    <string name="to_save">保存</string>
    <string name="to_save_success">保存成功</string>
    <string name="address_person_comfirm">收货人：</string>
    <string name="address_person_address_comfirm">收货地址：</string>
    <string name="address_person">收货人&#160;&#160;&#160;&#160;</string>
    <string name="address_person_hint">收货人姓名</string>
    <string name="address_person_empty_hint">请输入收货人姓名</string>
    <string name="address_mobile">联系电话</string>
    <string name="address_mobile_hint">请输入联系电话</string>
    <string name="address_mobile_empty_hint">请输入联系电话</string>
    <string name="address_mobile_error_hint">联系电话格式错误</string>
    <string name="address_area">所在地区</string>
    <string name="address_area_hint">省市区</string>
    <string name="address_area_empty_hint">请选择省市区</string>
    <string name="address_detail_by_one">详细地址</string>
    <string name="address_detail_by_one_hint">请填写详细地址</string>
    <string name="address_detail_by_one_empty_hint">请填写详细地址</string>
    <string name="to_cancel">取消</string>
    <string name="to_recharge">充值</string>
    <string name="to_getmoney_out">提现</string>
    <string name="not_enough_money_to_order">您的余额不足，请点击充值</string>
    <string name="change_recharge">零钱充值</string>
    <string name="change_balance">零钱余额</string>
    <string name="the_change">零钱</string>
    <string name="change_detail">零钱明细</string>
    <string name="unit_rmb">¥</string>
    <string name="amount_recharge">充值金额</string>
    <string name="confirm_recharge">确定充值</string>
    <string name="recharge_by_alipay">支付宝充值</string>
    <string name="recharge_by_weixin">微信充值</string>
    <string name="recharge_success">支付成功</string>
    <string name="recharge_fail">支付失败</string>
    <string name="no_alipay_permission">缺少支付所需权限，请到系统设置开启</string>
    <string name="goods_buy_success">您已经成功支付，请耐心等待商家发货，谢谢</string>
    <string name="back_to_brands">返回品牌</string>
    <string name="goods_buy_over">购买完成</string>
    <string name="red_package_reward">红包奖励</string>
    <string name="shopping_consumption">购物消费</string>
    <string name="order_number">订单号：</string>
    <string name="remind_the_shipment">提醒发货</string>
    <string name="view_logistics">查看物流</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="delete_order">删除订单</string>
    <string name="wait_to_pay">&#160;&#160;待支付&#160;&#160;</string>
    <string name="order_cancel">取消订单</string>
    <string name="the_all">全部</string>
    <string name="wait_receipt">待发货</string>
    <string name="had_receipt">待收货</string>
    <string name="change_nickname">更改名字</string>
    <string name="change_niuqun_num">设置牛群号</string>
    <string name="change_sign">设置签名</string>
    <string name="person_help">私人特助</string>
    <string name="app_system_message">系统消息</string>
    <string name="empty_cart_hint">购物车空空如也</string>
    <string name="no_data_hint">没有相关内容</string>
</resources>
