<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color8"
    android:orientation="vertical"
    tools:context="com.daoyu.niuqun.ui.center.AboutActivity">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_about"
        android:scaleType="fitCenter"
        android:src="@mipmap/icon_logo_tran" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textColor="@color/color4"
        android:textSize="@dimen/h6"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/new_version"
        android:textColor="@color/color4"
        android:textSize="@dimen/h4" />
</LinearLayout>
