<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/order_number"
            android:textColor="@color/color4"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textColor="@color/color4"
            android:textSize="@dimen/h4" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color8" />

    <com.daoyu.niuqun.view.MyListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/color8"
        android:dividerHeight="0.5dp"
        android:focusable="false"
        android:listSelector="@color/transparent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color8" />

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="0dp">

        <TextView
            android:id="@+id/tv_del"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_btn_empty_black"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/delete_order"
            android:textColor="@color/color4"
            android:textSize="@dimen/h4"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_view"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_btn_empty_black"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/view_logistics"
            android:textColor="@color/color4"
            android:textSize="@dimen/h4"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_btn_empty_black"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/order_cancel"
            android:textColor="@color/color4"
            android:textSize="@dimen/h4"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_pay"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_btn_red"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/wait_to_pay"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/h3"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_remind"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_btn_red"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/remind_the_shipment"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/h3"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_btn_red"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/confirm_receipt"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/h3"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>