<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.daoyu.niuqun.ui.user.RegisterActivity">

    <include layout="@layout/view_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_mobile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_in_china"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/h6" />

        <View
            android:layout_width="2dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/color5" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|start"
            android:hint="@string/hint_login_username"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color5"
            android:textSize="@dimen/h6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/color5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@mipmap/icon_verify_code"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_verify_right" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|start"
            android:hint="@string/hint_verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color5"
            android:textSize="@dimen/h6" />

        <View
            android:layout_width="2dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/color5" />

        <TextView
            android:id="@+id/text_getcode"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/color1"
            android:textSize="@dimen/h6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/color5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|start"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:maxLength="24"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color5"
            android:textSize="@dimen/h6" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_password_hide" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/color5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|start"
            android:hint="@string/hint_login_password_again"
            android:inputType="textPassword"
            android:maxLength="24"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color5"
            android:textSize="@dimen/h6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/color5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="6dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_recommend" />

        <EditText
            android:id="@+id/et_recommend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:digits="@string/base_number"
            android:gravity="center_vertical|start"
            android:hint="@string/hint_recommendation_code"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color5"
            android:textSize="@dimen/h6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/color5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_agreement"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            android:contentDescription="@string/app_name"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/agreement_select" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_read_and_agree"
            android:textColor="@color/color6"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/text_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_user_agreement"
            android:textColor="@color/color1"
            android:textSize="@dimen/h4" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/bg_btn_black"
        android:text="@string/the_register"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/h6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_forget_password2"
            android:textColor="@color/color6"
            android:textSize="@dimen/h2" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_login"
            android:textColor="@color/color6"
            android:textSize="@dimen/h2" />
    </LinearLayout>

</LinearLayout>
