<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_white"
    android:orientation="vertical">
    <!--简单的对话框（只有标题、确认、取消）-->
    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:text="@string/not_enough_money_to_order"
        android:textColor="@color/color4"
        android:textSize="@dimen/h6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/to_cancel"
            android:textColor="@color/color4"
            android:textSize="@dimen/h6" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color8" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/to_recharge"
            android:textColor="@color/color1"
            android:textSize="@dimen/h6" />
    </LinearLayout>
</LinearLayout>